<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"

    android:orientation="vertical"
    >

    <TextView
        style="@style/ownStyleCategorie"
        android:text="@string/masa"
        android:background="@color/categoriaMasa"
        android:onClick="goMasaActivity"
    />

    <TextView
        style="@style/ownStyleCategorie"
        android:text="@string/distancia"
        android:background="@color/categoriaDistancia"
        android:onClick="goDistanciaActivity"
    />

    <TextView
        style="@style/ownStyleCategorie"
        android:text="@string/volumen"
        android:background="@color/categoriaVolumen"
        android:onClick="goVolumenActivity"
    />

    <TextView
        style="@style/ownStyleCategorie"
        android:text="@string/cocina"
        android:background="@color/categoriaCocina"
        android:onClick="goCocinaActivity"
    />

    <TextView
        style="@style/ownStyleCategorie"
        android:text="@string/temperatura"
        android:background="@color/categoriaTemperatura"
        android:onClick="goTemperaturaActivity"
    />

    <TextView
        style="@style/ownStyleCategorie"
        android:text="@string/presion"
        android:background="@color/categoriaPresion"
        android:onClick="goPresionActivity"
    />

</LinearLayout>